Fix bleeding hero display in IE (mostly)

--- a/cfgov/unprocessed/css/molecules/hero.less
+++ b/cfgov/unprocessed/css/molecules/hero.less
@@ -128,6 +128,7 @@
 
         &__bleed-vertical {
             position: relative;
+            height: 100%;
 
             .m-hero_image {
                 display: block;
@@ -137,8 +138,6 @@
             .m-hero_image__bleeding {
                 width: 100%;
                 height: 100%;
-                position: absolute;
-                top: 0;
                 background-position: center;
                 background-repeat: no-repeat;
                 background-size: cover;
@@ -151,12 +150,6 @@
             } );
 
             .respond-to-min( @bp-sm-min, {
-                .m-hero_image {
-                    display: none;
-                }
-            } );
-
-            .respond-to-min( @bp-med-min, {
                 .m-hero_image {
                     display: none;
                 }
